# xianxia-world-engine

./: .deepsource.toml  .dockerignore  .env  .env.example  .env.test  .eslintrc.js  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  =1.0.0  =5.9.0  AGENTS.md  BUG_FIX_REPORT.md  CHANGELOG.md  CHANGELOG_NLP.md  CONTRIBUTING.md  Dockerfile  FEATURES_GUIDE.md  FINAL_STEP.md  FIXES_SUMMARY.md  FIX_README.md  FIX_STEPS.md  FIX_SUMMARY.md  FLASK_FIX_README.md  HF-002_TEMPLATE_FIX_SUMMARY.md  IMPLEMENTATION_REPORT.md  LICENSE  MYPY_FIX_GUIDE.md  MYPY_MANUAL_FIX_GUIDE.md  Makefile  NLP_TEST_SUITE_COMPLETION_REPORT.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_V3.md  PHASE4_BATCH1_SUMMARY.md  PHASE4_BATCH2_PLAN.md  PLAYWRIGHT_TEST_README.md  PROJECT_COMPLETE.md  (+194 more)
_archive/: quick_start.py
api/: __init__.py  errors.py
backup_20250610_094231/: game_core.py
backup_20250611_204502/: run_web_ui_optimized.py
config/: .flake8  .pre-commit-config.yaml  balance.json  game_config.py  package.json  tsconfig.json
core/: __init__.py  player_initializer.py
data/: names_common.json  world_laws.json
deepseek/: __init__.py
deploy/: verification_checklist.md
docs/: AI_COLLABORATION_TEMPLATE.md  API.md  ARCHITECTURE.md  ASYNC_IMPLEMENTATION_CHECKLIST.md  ASYNC_IMPLEMENTATION_PLAN.md  ASYNC_IMPLEMENTATION_README.md  CHARACTER_CREATION_FIX.md  DEEPSEEK_ASYNC_QUICKSTART.md  DEMO_LOG.md  DEVELOPER_GUIDE.md  FINAL_REPORT.md  FIX_REPORT_2025_06_09.md  HTML_LOGGER.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INK_UI_README.md  KNOWN_BUGS.md  MIGRATION_GUIDE_v2.md  MOD_SYSTEM.md  NLP_GUIDE.md  OPTIMIZATION_GUIDE.md  PROJECT_ACHIEVEMENTS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_GUIDE.md  RESTRUCTURE_REPORT.json  ROADMAP.md  STARTERS.md  START_HERE.md  TODO.md  UI_OPTIMIZATION_GUIDE.md  WORLD_OVERVIEW.md  auction-system-docs.md  character_design.md  cleanup_report_20250624_165100.md  (+20 more)
entrypoints/: run_web_ui_optimized.py
event_system/: initial_fate.py
examples/: auction_demo.py  command_processor_example.py  demo_roll_system.py  game_core_integration_example.py  game_core_refactored.py  game_state_manager_example.py  llm_config_example.py  orchestrator_demo.py  output_manager_example.py  simple_roll.py  (+2 more)
(+1518 files in other folders)
